tests/paczka2/big_fuzzy/48783403.err
Error in line 3: S437 A871 41,5
Error in line 13: gl5bhDcj3 S163 23,3
Error in line 16: S437 S163 51,0
Error in line 37: gl5bhDcj3 S437 11,3
Error in line 41: BO9v8A6z1 A515 0,7
Error in line 42: BO9v8A6z1 A871 79,7
Error in line 45: BO9v8A6z1 A515 57,1
Error in line 46: BO9v8A6z1 A871 87,8
Error in line 54: Ip6qIJ A871 58,5
Error in line 57: Ip6qIJ A515 88,9
Error in line 55: ofH A871 20,6
Error in line 70: ofH A515 2,9
Error in line 71: ofH S163 61,3
Error in line 73: ofH A515 59,8
Error in line 79: S437 S437 77,65
Error in line 75: Ip6qIJ S437 87,3
Error in line 76: ofH S437 21,3
Error in line 80: BO9v8A6z1 A871 69,5
Error in line 81: Ip6qIJ A871 3,4
Error in line 90: Ip6qIJ S163 37,6
Error in line 87: 7UZm A871 74,7
Error in line 78: S437 S163 92,3
Error in line 92: Ip6qIJ A871 86,4
Error in line 105: S437 S163 62,0
Error in line 112: S437 A515 24,9
Error in line 116: S437 S163 55,2
Error in line 135: S437 A871 21,63
Error in line 148: S43 A81 60,8
Error in line 162: gl5bhDcj3 A871 0,8
Error in line 183: BO9v8A6z1 A871 11,92
Error in line 188: BO9v8A6z1 S163 9,9
Error in line 191: S437 S437 94,0
Error in line 189: BO9v8A6z1 S437 63,7
Error in line 205: Ip6qIJ S163 77,6
Error in line 196: BO9v8A6z1 A515 30,9
Error in line 212: F8c A515 40,9
Error in line 227: 7UZm S437 120,5
Error in line 233: BO9v8A6z1 S163 86,6
Error in line 241: gl5bhDcj3 S437 88,0
